--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
+atomicwrites==1.4.0
+attrs==21.2.0
 click==8.0.3
 colorama==0.4.4
+coverage==6.1.2
 DateTime==4.3
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
+Flask-Testing==0.8.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 PyMySQL==1.0.2
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-cov==3.0.0
 pytz==2021.3
 SQLAlchemy==1.4.27
+toml==0.10.2
+tomli==1.2.2
 Werkzeug==2.0.2
 WTForms==3.0.0
 zope.interface==5.4.0
